2021-08-19  David Kilzer  <ddkilzer@apple.com>

        [WTF] Fix static analyzer warnings for clang tidy bugprone-move-forwarding-reference checker
        <https://webkit.org/b/229114>

        Reviewed by Darin Adler.

        * wtf/Deque.h:
        (WTF::inlineCapacity>::appendAndBubble):
        * wtf/Scope.h:
        (WTF::ScopeExit::ScopeExit):
        * wtf/ScopedLambda.h:
        (WTF::scopedLambda):
        * wtf/SharedTask.h:
        (WTF::createSharedTask):
        - Replace WTFMove() with std::forward<>().

2021-08-19  Alex Christensen  <achristensen@webkit.org>

        Remove more non-inclusive language from Source
        https://bugs.webkit.org/show_bug.cgi?id=229230

        Reviewed by Myles C. Maxfield.

        * icu/unicode/uspoof.h:
        This comment change comes from upstream ICU.
        * wtf/URL.h:

2021-08-18  Ryosuke Niwa  <rniwa@webkit.org>

        [ iOS Debug ] 12 TestWebKitAPI.WebKitLegacy. tests are crashing
        https://bugs.webkit.org/show_bug.cgi?id=229250

        Reviewed by Wenson Hsieh.

        Disable the assertion when Web Thread is enabled for now.

        * wtf/CheckedRef.h:
        (WTF::SingleThreadIntegralWrapper::assertThread const):

2021-08-18  Megan Gardner  <megan_gardner@apple.com>

        Remove unneeded UIKitSPI declarations
        https://bugs.webkit.org/show_bug.cgi?id=210075

        Reviewed by Wenson Hsieh.

        Remove unneeded feature define.

        * wtf/PlatformHave.h:

2021-08-18  Xabier Rodriguez Calvar  <calvaris@igalia.com>

        [GStreamer][EME] Try to parse XML init datas that could possibly come from MPD manifests
        https://bugs.webkit.org/show_bug.cgi?id=229145

        Reviewed by Alicia Boya Garcia.

        * wtf/glib/GUniquePtr.h: Added deleter for GMarkupParseContext.

2021-08-16  Alex Christensen  <achristensen@webkit.org>

        Enable PerformanceNavigationAPI by default
        https://bugs.webkit.org/show_bug.cgi?id=227336

        Reviewed by Chris Dumez.
