@@ -1038,6 +1038,7 @@
 #if (PLATFORM(IOS) || PLATFORM(MACCATALYST)) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 150000
 #define HAVE_UICONTEXTMENU_STYLE_CUSTOM_PRESENTATION 1
 #define HAVE_UIDATEPICKER_INSETS 1
+#define HAVE_UIDATEPICKER_OVERLAY_PRESENTATION 1
 #define HAVE_UIMENUOPTIONS_SINGLE_SELECTION 1
 #endif
 
@@ -1084,11 +1085,6 @@
 #define HAVE_QUICKLOOK_PREVIEW_ITEM_DATA_PROVIDER 1
 #define HAVE_QUICKLOOK_ITEM_PREVIEW_OPTIONS 1
 #define HAVE_QUICKLOOK_PREVIEW_ACTIVITY 1
-#endif
-
-// FIXME: Replace the __has_include check with a version check once internal bots are updated (webkit.org/b/227298).
-#if PLATFORM(IOS_FAMILY) && defined __has_include && __has_include(<UIKit/_UIDatePickerOverlayPresentation.h>)
-#define HAVE_UIDATEPICKER_OVERLAY_PRESENTATION 1
 #endif
 
 #if PLATFORM(IOS) || PLATFORM(MACCATALYST)
